Implement rest of parser - still fails for some whitespace