@@ -9,7 +9,7 @@ import java.util.regex.Pattern;
 
 import static com.knuddels.jtokkit.EncodingFactory.compileRegex;
 import static com.knuddels.jtokkit.reference.Cl100kBaseTestTest.TEXTS;
-import static java.nio.charset.StandardCharsets.UTF_8;
+import static java.lang.Character.*;
 import static java.util.stream.Collectors.joining;
 import static java.util.stream.IntStream.rangeClosed;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -18,9 +18,12 @@ class EncodingFactoryTest {
     static final String originalRegex = "(?i:'s|'t|'re|'ve|'m|'ll|'d)|[^\\r\\n\\p{L}\\p{N}]?\\p{L}+|\\p{N}{1,3}| ?[^\\s\\p{L}\\p{N}]+[\\r\\n]*|\\s*[\\r\\n]+|\\s+(?!\\S)|\\s+";
     static final List<String> expectedOriginal = List.of("", "(?i:'s|'t|'re|'ve|'m|'ll|'d)", "[^\\r\\n\\p{L}\\p{N}]?\\p{L}+", "\\p{N}{1,3}", " ?[^\\s\\p{L}\\p{N}]+[\\r\\n]*", "\\s*[\\r\\n]+", "\\s+(?!\\S)", "\\s+");
 
-    static SortedMap<Integer, List<String>> getEncounters(String text, List<String> actualRegexParts, String expectedRegex, boolean caseInsensitive) {
-        assert actualRegexParts.stream().skip(1).collect(joining("|")).equals(expectedRegex) : "Regex mismatch";
-        var actualFinalRegex = actualRegexParts.stream().skip(1).map(x -> "(" + x + ")").collect(joining("|"));
+    static final String currentRegex = "'(?:[sdmt]|ll|ve|re)|[^\\r\\n\\p{L}\\p{N}]?+\\p{L}+|\\p{N}{1,3}| ?[^\\s\\p{L}\\p{N}]++[\\r\\n]*|\\s*[\\r\\n]|\\s+(?!\\S)|\\s+";
+    static final List<String> currentRegexParts = List.of("", "'(?:[sdmt]|ll|ve|re)", "[^\\r\\n\\p{L}\\p{N}]?+\\p{L}+", "\\p{N}{1,3}", " ?[^\\s\\p{L}\\p{N}]++[\\r\\n]*", "\\s*[\\r\\n]", "\\s+(?!\\S)", "\\s+");
+
+    static SortedMap<Integer, List<String>> getEncounters(String text, List<String> currentRegexParts, String currentRegex, boolean caseInsensitive) {
+        assert currentRegexParts.stream().skip(1).collect(joining("|")).equals(currentRegex) : "Regex mismatch";
+        var actualFinalRegex = currentRegexParts.stream().skip(1).map(x -> "(" + x + ")").collect(joining("|"));
         var actualPattern = compileRegex(actualFinalRegex, caseInsensitive);
 
         var encounters = getEncounters(text, actualPattern);
@@ -48,13 +51,13 @@ class EncodingFactoryTest {
                     .filter(i -> matcher.group(i) != null).findFirst()
                     .getAsInt();
             assert Objects.equals(match, matcher.group(index)) : "Mismatch between match and group " + index + " for text: " + text;
-            // printExtraInfo(text, actualRegexParts, encounters, index, matcher);
+            // printExtraInfo(text, currentRegexParts, encounters, index, matcher);
             encounters.computeIfAbsent(index, k -> new ArrayList<>()).add(match);
         }
         return encounters;
     }
 
-    private static void printExtraInfo(String text, List<String> actualRegexParts, Map<Integer, List<String>> encounters, int index, Matcher matcher) {
+    private static void printExtraInfo(String text, List<String> currentRegexParts, Map<Integer, List<String>> encounters, int index, Matcher matcher) {
         if (!encounters.containsKey(index)) {
             var end = matcher.end();
             String c;
@@ -65,12 +68,12 @@ class EncodingFactoryTest {
             } else {
                 c = text.substring(end, end + 2);
             }
-            System.out.println("Next chars after: `" + matcher.group() + "` for index " + index + ", pattern: `" + actualRegexParts.get(index) + "` is  + `" + c + "`");
+            System.out.println("Next chars after: `" + matcher.group() + "` for index " + index + ", pattern: `" + currentRegexParts.get(index) + "` is  + `" + c + "`");
         }
     }
 
-    private static Map<String, List<String>> compareEncounters(String text, List<String> actualRegexParts, String expectedRegex) {
-        var actual = getEncounters(text, actualRegexParts, expectedRegex, true);
+    private static Map<String, List<String>> compareEncounters(String text, List<String> currentRegexParts, String currentRegex) {
+        var actual = getEncounters(text, currentRegexParts, currentRegex, true);
         var expected = getEncounters(text, expectedOriginal, originalRegex, false);
         if (!Objects.equals(expected, actual)) {
             System.out.println("Expected: " + expected);
@@ -79,7 +82,7 @@ class EncodingFactoryTest {
         }
 
         var result = new LinkedHashMap<String, List<String>>();
-        actual.forEach((index, match) -> result.put(actualRegexParts.get(index), match));
+        actual.forEach((index, match) -> result.put(currentRegexParts.get(index), match));
         return result;
     }
 
@@ -92,7 +95,7 @@ class EncodingFactoryTest {
         for (var i = 0; i < modifiedText.length() - 1; i++) {
             if (random.nextInt(5) == 0) {
                 // Randomly flip case whitespaces
-                if (Character.isWhitespace(modifiedText.charAt(i))) {
+                if (isWhitespace(modifiedText.charAt(i))) {
                     var newWhitespace = whitespaceChars.get(random.nextInt(whitespaceChars.size()));
                     for (var j = 0; j < newWhitespace.length(); j++) {
                         modifiedText.setCharAt(i + j, newWhitespace.charAt(j));
@@ -103,14 +106,14 @@ class EncodingFactoryTest {
             // Randomly flip case
             if (random.nextInt(10) == 0) {
                 var ch = random.nextBoolean() ?
-                        Character.toUpperCase(modifiedText.charAt(i)) :
-                        Character.toLowerCase(modifiedText.charAt(i));
+                        toUpperCase(modifiedText.charAt(i)) :
+                        toLowerCase(modifiedText.charAt(i));
                 modifiedText.setCharAt(i, ch);
             }
 
             // Randomly insert Unicode characters
             if (random.nextInt(20) == 0) {
-                var newChars = Character.toChars(random.nextInt(Character.MAX_CODE_POINT + 1));
+                var newChars = toChars(random.nextInt(MAX_CODE_POINT + 1));
                 for (var j = 0; j < newChars.length; j++) {
                     modifiedText.setCharAt(i + j, newChars[j]);
                 }
@@ -123,8 +126,8 @@ class EncodingFactoryTest {
 
     private static List<String> getWhitespaces() {
         Set<String> whitespaceChars = new HashSet<>();
-        for (var c = Character.MIN_VALUE; c < Character.MAX_VALUE; c++) {
-            if (Character.isWhitespace(c)) {
+        for (var c = MIN_VALUE; c < MAX_VALUE; c++) {
+            if (isWhitespace(c)) {
                 whitespaceChars.add(String.valueOf(c));
             }
         }
@@ -132,19 +135,23 @@ class EncodingFactoryTest {
         return new ArrayList<>(whitespaceChars);
     }
 
+    static String normalizeStringForTesting(String testString) {
+        return testString
+                .replaceAll("\\r", "\\\\r")
+                .replaceAll("\\n", "\\\\n")
+                .replaceAll(" ", "·");
+    }
+
     @Test
     void oldRegexMatchesTheSameWayAsTheOptimizedOne() throws Exception {
-        var actualRegexParts = List.of("", "'(?:[sdmt]|ll|ve|re)", "[^\\r\\n\\p{L}\\p{N}]?+\\p{L}+", "\\p{N}{1,3}", " ?[^\\s\\p{L}\\p{N}]++[\\r\\n]*", "\\s*[\\r\\n]", "\\s+(?!\\S)", "\\s+");
-        var expectedRegex = "'(?:[sdmt]|ll|ve|re)|[^\\r\\n\\p{L}\\p{N}]?+\\p{L}+|\\p{N}{1,3}| ?[^\\s\\p{L}\\p{N}]++[\\r\\n]*|\\s*[\\r\\n]|\\s+(?!\\S)|\\s+";
-
 //        var collected = new LinkedHashMap<String, List<String>>();
-//        actualRegexParts.stream().skip(1).forEach(x -> collected.put(x, new ArrayList<>()));
+//        currentRegexParts.stream().skip(1).forEach(x -> collected.put(x, new ArrayList<>()));
 //        for (var text : TEXTS) {
-//            compareEncounters(text, actualRegexParts, expectedRegex)
+//            compareEncounters(text, currentRegexParts, currentRegex)
 //                    .forEach((key, value) -> collected.get(key).addAll(value));
 //
 //            var modifiedText = permuteText(text);
-//            compareEncounters(modifiedText, actualRegexParts, expectedRegex)
+//            compareEncounters(modifiedText, currentRegexParts, currentRegex)
 //                    .forEach((key, value) -> collected.get(key).addAll(value));
 //        }
 //
@@ -158,7 +165,7 @@ class EncodingFactoryTest {
 //
 //        System.out.println(groupedResults.size());
 
-        var encounters = getEncounters("I'm:  0\n", actualRegexParts, expectedRegex, true);
+        var encounters = getEncounters("I'm:  0\n", currentRegexParts, currentRegex, true);
         System.out.println(encounters);
         assertEquals(7, encounters.size());
 
@@ -166,7 +173,7 @@ class EncodingFactoryTest {
         for (var text : TEXTS) {
 //            text.lines().forEach(line -> {
 //                var t = line + "\n";
-            var actual = getEncounters(text, actualRegexParts, expectedRegex, true);
+            var actual = getEncounters(text, currentRegexParts, currentRegex, true);
             if (actual.size() == 7) {
                 completeLines.put(text, actual);
             }
@@ -177,150 +184,186 @@ class EncodingFactoryTest {
 
     @Test
     public void testParser() {
-        List<String> testStrings = Arrays.asList(
+        var testStrings = new ArrayList<>(List.of(
+                "\n",
+                " ",
+                "  a",
+                "\n \n ",
+                "\n \n",
+                "\n ",
+                "\n \n!",
+                "\n \n   ",
+                "\n  !",
+
+                "   !",
+                "   A",
+                "   0",
+
+                "   \n!",
+                "   \nA",
+                "   \n0",
+
+                "   \n !",
+                "   \n A",
+                "   \n 0",
+
                 "Unicode snowman: ☃️",
                 "I'm:  0\n",
                 "We'll meet at 3 o'clock.",
                 "Hello, world! It's a beautiful day...",
                 "In 2023, I'll be 25 years old.",
                 "Hello \n\n World  !",
-                " It's 2:30pm;\n\n\n\nlet's eat, sleep , and code! \n \n \t"
-        );
-        var encoding = (GptBytePairEncoding) EncodingFactory.cl100kBase();
+                " It's 2:30pm;\n\n\n\nlet's eat, sleep , and code!",
+                "'Thank God, here it is.' But when we took up the trunk..."
+        ));
+        testStrings.addAll(TEXTS);
+        // TODO NBSP?
+
+        var pattern = compileRegex(originalRegex, false);
         for (String testString : testStrings) {
-            List<String> expected = matches(testString, originalRegex);
-            var collected = encoding.encode(testString).primitiveStream().mapToObj(token -> new String(encoding.decodeToken(token), UTF_8)).toList();
-            // TODO assertEquals(expected, collected);
+            System.out.println("Matching: `" + normalizeStringForTesting(testString.substring(0, Math.min(100, testString.length()))) + "`...");
+            List<String> expected = matches(testString, pattern);
+            List<String> actual = Parser.parse(testString);
 
-            List<String> result = new Parser().parse(testString);
-
-            assertEquals(expected, result, "Parsed result does not match expected for: " + testString);
-            System.out.println("`" + testString + "` matches!");
+//            assertEquals(expected.stream().map(EncodingFactoryTest::normalizeString).toList(), actual.stream().map(EncodingFactoryTest::normalizeString).toList());
+            assertEquals(expected, actual);
         }
     }
 
-    private List<String> matches(String input, String regex) {
+    private List<String> matches(String input, Pattern pattern) {
         List<String> tokens = new ArrayList<>();
-        for (Matcher matcher = compileRegex(regex, false).matcher(input); matcher.find(); ) {
+        for (Matcher matcher = pattern.matcher(input); matcher.find(); ) {
             var group = matcher.group();
-            assert input.contains(group);
             tokens.add(group);
         }
         return tokens;
     }
 
     public static class Parser {
-        private static void addMatch(List<String> tokens, StringBuilder currentToken) {
-            tokens.add(currentToken.toString());
-            currentToken.setLength(0);
-        }
 
-        public List<String> parse(String input) {
+        public static final String SDTM = "sdtmSDTM";
+
+        public static List<String> parse(String input) {
             List<String> tokens = new ArrayList<>();
             StringBuilder currentToken = new StringBuilder();
 
-            for (int i = 0; i < input.length(); ) {
-                char c0 = input.charAt(i);
+            for (int index = 0; index < input.length(); ) {
+                char c0 = input.charAt(index);
 
-                if (c0 == '\'' && i + 1 < input.length()) {
-                    // 1) `'(?:[sdtm]|ll|ve|re)` - contractions, such as the suffixes of `he's`, `I'd`, `'tis`, `I'm`, `you'll`, `we've`, `they're`
-
-                    var c1 = input.charAt(i);
-                    if ("sdtm".indexOf(c1) >= 0) {
-                        currentToken.append(c0).append(c1);
-                        addMatch(tokens, currentToken);
-                        i += 2;
-                    } else if (i + 2 < input.length()) {
-                        var c2 = input.charAt(i + 1);
-                        if ((c1 == 'l' && c2 == 'l') || (c1 == 'v' && c2 == 'e') || (c1 == 'r' && c2 == 'e')) {
-                            currentToken.append(c1).append(c2);
-                            addMatch(tokens, currentToken);
-                            i += 3;
-                        }
-                    }
-                }
-
-                if (Character.isLetter(c0) ||
-                        (i + 1 < input.length() && !Character.isLetter(c0) && !Character.isDigit(c0) && c0 != '\r' && c0 != '\n' && Character.isLetter(input.charAt(i + 1)))) {
+                // 1) `'(?:[sdtm]|ll|ve|re)` - contractions, such as the suffixes of `he's`, `I'd`, `'tis`, `I'm`, `you'll`, `we've`, `they're`
+                if (isShortContraction(input, c0, index)) {
+                    currentToken.append(c0).append(input.charAt(index + 1));
+                } else if (isLongContraction(input, c0, index)) {
+                    currentToken.append(c0).append(input.charAt(index + 1)).append(input.charAt(index + 2));
+                } else if (isLetter(c0) ||
+                        (!isLetterOrDigit(c0) && "\r\n".indexOf(c0) < 0 && (index + 1 >= input.length() || isLetter(input.charAt(index + 1))))) {
                     // 2) `[^\r\n\p{L}\p{N}]?+\p{L}+` - words such as ` of`, `th`, `It`, ` not`
                     currentToken.append(c0);
-                    i++;
+                    int j = index + 1;
 
-                    while (i < input.length()) {
-                        c0 = input.charAt(i);
-                        if (!Character.isLetter(c0)) {
+                    while (j < input.length()) {
+                        c0 = input.charAt(j);
+                        if (!isLetter(c0)) {
                             break;
                         }
                         currentToken.append(c0);
-                        i++;
+                        j++;
                     }
-
-                    addMatch(tokens, currentToken);
-                } else if (Character.isDigit(c0)) {
+                } else if (isDigit(c0)) {
                     // 3) `\p{N}{1,3}` - numbers, such as `4`, `235`
                     currentToken.append(c0);
-                    i++;
-                    var c1 = input.charAt(i);
-                    if (Character.isDigit(c1)) {
-                        currentToken.append(c1);
-                        i++;
-                        var c2 = input.charAt(i);
-                        if (Character.isDigit(c2)) {
-                            currentToken.append(c2);
-                            i++;
+                    int j = index + 1;
+                    if (j < input.length()) {
+                        var c1 = input.charAt(j);
+                        if (isDigit(c1)) {
+                            currentToken.append(c1);
+                            j++;
+                            if (j < input.length()) {
+                                var c2 = input.charAt(j);
+                                if (isDigit(c2)) {
+                                    currentToken.append(c2);
+                                }
+                            }
                         }
                     }
-                    addMatch(tokens, currentToken);
-                } else if ((!Character.isWhitespace(c0) && !Character.isLetter(c0) && !Character.isDigit(c0)) ||
-                        (i + 1 < input.length() && !Character.isWhitespace(input.charAt(i + 1)) && !Character.isLetter(input.charAt(i + 1)) && !Character.isDigit(input.charAt(i + 1)))) {
-                    // 4) ` ?[^\s\p{L}\p{N}]++[\r\n]*` - punctuation, such as `,`, `.`, `"`
+                } else if ((!isWhitespace(c0) && !isLetterOrDigit(c0)) ||
+                        (index + 1 >= input.length() || (!isWhitespace(input.charAt(index + 1)) && !isLetterOrDigit(input.charAt(index + 1))))) {
+                    // 4) ` ?[^\s\p{L}\p{N}]++[\r\n]*` - punctuation, such as `,`, ` .`, `"`
                     currentToken.append(c0);
-                    i++;
-
-                    while (i < input.length()) {
-                        c0 = input.charAt(i);
-                        if (Character.isWhitespace(c0) || Character.isLetter(c0) || Character.isDigit(c0)) {
+                    var j = index + 1;
+                    while (j < input.length()) {
+                        c0 = input.charAt(j);
+                        if (isWhitespace(c0) || isLetterOrDigit(c0)) {
                             break;
                         }
                         currentToken.append(c0);
-                        i++;
+                        j++;
                     }
 
-                    while (i < input.length()) {
-                        c0 = input.charAt(i);
+                    while (j < input.length()) {
+                        c0 = input.charAt(j);
                         if (c0 != '\r' && c0 != '\n') {
                             break;
                         }
 
                         currentToken.append(c0);
-                        i++;
+                        j++;
                     }
-
-                    addMatch(tokens, currentToken);
-                } else if (Character.isWhitespace(c0)) {
-                    // 5) `\s*[\r\n]` - line endings such as `\r\n    \r\n`
+                } else {
+                    // 5) `\s*[\r\n]+` - line endings such as `\r\n    \r\n`
                     // 6) `\s+(?!\S)` - whitespaces such as `               ` or ` `
                     // 7) `\s+` - unmatched remaining spaces, such as ` `
-                    currentToken.append(c0);
-                    i++;
-
-                    while (i < input.length()) {
-                        c0 = input.charAt(i);
-                        if (!Character.isWhitespace(c0) || (i + 1 < input.length() && !Character.isWhitespace(input.charAt(i + 1)))) {
+                    assert isWhitespace(c0);
+                    int j = index;
+                    do {
+                        c0 = input.charAt(j);
+                        if (!isWhitespace(c0)) {
                             break;
                         }
-
                         currentToken.append(c0);
-                        i++;
+                        j++;
+                    } while (j < input.length());
+
+                    int lastNewLineIndex = Math.max(currentToken.lastIndexOf("\r"), currentToken.lastIndexOf("\n"));
+                    if (lastNewLineIndex >= 0) {
+                        tokens.add(currentToken.substring(0, lastNewLineIndex + 1));
+                        currentToken.delete(0, lastNewLineIndex + 1);
+                        index += lastNewLineIndex + 1;
+                        j = index;
                     }
-                    addMatch(tokens, currentToken);
+
+                    if (!currentToken.isEmpty()) {
+                        if ((j < input.length() && !isWhitespace(c0))
+                                && (lastNewLineIndex >= 0 || currentToken.length() > 1)) {
+                            currentToken.setLength(currentToken.length() - 1);
+                        }
+                    }
                 }
 
                 if (!currentToken.isEmpty()) {
-                    addMatch(tokens, currentToken);
+                    index += currentToken.length();
+                    tokens.add(currentToken.toString());
+                    currentToken.setLength(0);
                 }
             }
             return tokens;
+        }
+
+        private static boolean isShortContraction(String input, char c0, int index) {
+            if (c0 != '\'' || index + 1 >= input.length()) {
+                return false;
+            }
+            var c1 = input.charAt(index + 1);
+            return SDTM.indexOf(c1) >= 0;
+        }
+
+        private static boolean isLongContraction(String input, char c0, int index) {
+            if (c0 != '\'' || index + 2 >= input.length()) {
+                return false;
+            }
+            var c1 = toLowerCase(input.charAt(index + 1));
+            var c2 = toLowerCase(input.charAt(index + 2));
+            return ((c1 == 'l' && c2 == 'l') || (c1 == 'v' && c2 == 'e') || (c1 == 'r' && c2 == 'e'));
         }
     }
 }
